# ai-track-engineer

./: .env.example  .gitattributes  .gitignore  .gitmessage  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: settings.yaml
docs/: AI-TrackEngineer-Plan.md
docs/spikes/: opponent-data.md
scripts/: mock_telemetry.py  train_models.py  validate_shm.py
scripts/spikes/: opponent_udp_probe.py
src/: __init__.py  main.py
src/ai/: __init__.py  advisor.py  context_builder.py  llm.py  models.py  ollama_client.py
src/analysis/: __init__.py  engine_monitor.py  lap_comparator.py  models.py  pattern_detector.py  pipeline.py  session_report.py  tyre_model.py
src/config/: __init__.py  ac_paths.py  settings.py
src/dashboard/: __init__.py  api.py  hub.py  pump.py  serialization.py  state.py
src/dashboard/static/: index.html
src/knowledge/: __init__.py  models.py  track_parser.py
src/knowledge/car_physics/: __init__.py  car_model.py  car_parser.py  chassis_parsers.py  ini.py  lut.py  power_parser.py
src/ml/: __init__.py  corner_dataset.py  corner_predictor.py  features.py  lap_quality.py  recorded_session.py
src/observability/: __init__.py  logging.py
src/processing/: __init__.py  corner_coach.py  lap_segmenter.py  lap_trace.py  message_queue.py  models.py
src/setup_lab/: __init__.py  consistency_scorer.py  digital_twin.py  setup_io.py  what_if.py
src/storage/: __init__.py  influx_client.py  schemas.py  session_recorder.py  sqlite_client.py
src/strategy/: __init__.py  fuel_strategy.py  gap_manager.py  mode_manager.py  pit_strategy.py  session_detector.py  tyre_strategy.py
src/telemetry/: __init__.py  converters.py  mock.py  models.py  opponents.py  shm_reader.py  shm_structs.py  source.py
tests/: conftest.py  factories.py
tests/unit/: test_ac_paths.py  test_advisor.py  test_analysis_pipeline.py  test_car_model.py  test_car_physics.py  test_chassis_and_setup.py  test_cli.py  test_consistency_scorer.py  test_context_builder.py  test_corner_coach.py  test_corner_dataset.py  test_dashboard_api.py  test_dashboard_hub.py  test_dashboard_pump.py  test_dashboard_serialization.py  test_dashboard_state.py  test_digital_twin.py  test_engine_monitor.py  test_fuel_strategy.py  test_gap_manager.py  test_influx_writer.py  test_lap_comparator.py  test_lap_quality.py  test_lap_segmenter.py  test_lap_trace.py  test_message_queue.py  test_ml.py  test_mock_source.py  test_mode_manager.py  test_opponents.py  test_pattern_detector.py  test_pit_strategy.py  test_recorded_session.py  test_session_detector.py  test_session_recorder.py  test_session_report.py  test_settings.py  test_shm_reader.py  test_sqlite_store.py  test_telemetry_converters.py  (+6 more)
tools/ac_app_opponents/: OpponentsBridge.py
