[project]
name = "ai-track-engineer"
version = "0.1.0"
description = "An AI-powered race engineer for Assetto Corsa: telemetry, analysis, voice, and a physics-based Setup Lab."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "megatron54" }]
keywords = ["assetto-corsa", "telemetry", "sim-racing", "ai", "race-engineer"]

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Data Processing
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    # Storage
    "influxdb-client[async]>=1.44.0",
    "aiosqlite>=0.20.0",
    # AI (local-only: Ollama)
    "httpx>=0.27.0",
    "ollama>=0.3.0",
    # Utils
    "structlog>=24.4.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "edge-tts>=6.1.0",
    "silero-vad>=4.0.0",
    "sounddevice>=0.4.7",
]
ml = [
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "joblib>=1.4.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/megatron54/ai-track-engineer"
Repository = "https://github.com/megatron54/ai-track-engineer"
Issues = "https://github.com/megatron54/ai-track-engineer/issues"

[project.scripts]
ai-track-engineer = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["influxdb_client.*", "ollama.*", "sounddevice.*", "silero_vad.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/main.py", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
